<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo_azul"
        android:orientation="vertical"
        tools:context=".view.telaLogin.telaLogin">


        <ImageView
            android:id="@+id/logo_desenho"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/imagem_negocios"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <View
            android:id="@+id/view"
            style="@style/ContainerComponents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_desenho" />

        <EditText
            android:id="@+id/login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_form_login"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:fontFamily="@font/coda"
            android:layout_gravity="center"
            android:layout_marginTop="220dp"
            app:layout_constraintStart_toStartOf="@id/logo_desenho"
            app:layout_constraintEnd_toEndOf="@id/logo_desenho"
            app:layout_constraintTop_toTopOf="@id/logo_desenho"
            />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_text"
            android:layout_marginTop="70dp"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/login_user"
            app:layout_constraintStart_toStartOf="@id/login_user"
            app:layout_constraintTop_toTopOf="@id/login_user" />


        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_text"
            android:hint="@string/hint_senha"
            android:drawableRight="@drawable/ic_senha"
            android:inputType="numberPassword"
            app:layout_constraintStart_toStartOf="@id/login_user"
            app:layout_constraintEnd_toEndOf="@id/login_user"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botaoEntrar"
            style="@style/Button"
            android:text="@string/Entrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botaoEntrar"
            />

        <TextView
            android:id="@+id/text_outros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Outros meios:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botaoEntrar"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/logo_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/logo_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_outros"
            android:layout_marginTop="12dp"
            />

        <TextView
            android:id="@+id/text_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="71dp"
            android:text="Não possui uma conta?"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_tela_cadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="71dp"
            android:text="@string/text_cadastro"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>